[project]
name = "sre-incident-env"
version = "1.0.0"
description = "SRE Incident Response Environment for OpenEnv"
authors = [
    {name = "Vishnu P S"}
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.20.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "env", "graders", "baseline"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
